fix: misaligned reveal button

--- a/src/app/room/room-controller-panel/room-controller-panel.component.scss
+++ b/src/app/room/room-controller-panel/room-controller-panel.component.scss
@@ -137,7 +137,7 @@
   align-items: center;
 
   .main-button {
-    flex: 1 0 90%;
+    flex: 1 1 90%;
     z-index: 1;
     background-color: var(--mdc-outlined-card-container-color);
   }
